<resources>
    <string name="app_name">FaviPrototype</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="error">Error!</string>
    <string name="empty">Empty!</string>
    <string name="no_internet">You\'re not connected to the internet!</string>
    <string name="email_not_valid">Email format is not valid!</string>
    <string name="password_not_valid">Password is less than 8 characters!</string>
    <string name="password_not_same">The passwords are different!</string>
    <string name="sign_in">Sign In</string>
    <string name="account_created">Account is successfully created!</string>
    <string name="successful">Successful!</string>
    <string name="sign_in_with_biometric">Sign In with Biometric</string>
    <string name="failed">Failed!</string>
    <string name="biometric_error">Please sign in with your email and password instead</string>
    <string name="biometric_auth">Please complete the authentication</string>
    <string name="biometric_error_button">Sign in with email instead</string>
    <string name="biometric_error_no_hardware">No biometric features available on this device</string>
    <string name="biometric_error_hw_unavailable">Biometric features are currently unavailable</string>
    <string name="biometric_error_none_enrolled">Please setup your biometric first</string>
    <string name="biometric_auth_is_off">Please activate biometric sign in from the main menu first!</string>
    <string name="cd_aktifkan_fitur_sidik_jari">Aktifkan Fitur Sidik Jari</string>
    <string name="cd_tambah_saldo">Tambah Saldo</string>
    <string name="cd_transfer_saldo">Transfer Saldo</string>
    <string name="sign_in_with_voice">Sign In with Voice</string>
    <string name="voice_recording">Voice Recording</string>
    <string name="zero_time">00:00</string>
    <string name="biometric_activated">Biometric has been activated!</string>
    <string name="biometric_deactivated">Biometric has been deactivated!</string>
    <string name="favi">FAVI</string>
    <string name="main_menu">Main Menu</string>

    <string name="username">Halo, dummy! Si Lorem Ipsum Dolor Si jamet</string>
    <string name="username_format">Halo, %s!</string>
    <string name="user_cardview_text">Current Balance (IDR):</string>
    <string name="user_balance">12.000.000</string>
    <string name="transfer_fund">Transfer Fund</string>
    <string name="toggle_biometric_sign_in">Toggle Biometric Sign In</string>
    <string name="add_fund">Add Fund</string>

    <string name="request_fund">Request Fund</string>
    <string name="requested_fund_amount_IDR">Requested Fund Amount (IDR)</string>
    <string name="requested_fund_error">Please input your request fund!</string>
    <string name="requested_fund_success">Your request is accepted!</string>

    <string name="bank_name">Bank Name</string>
    <string name="transfer_token_id">Receiver ID/Token</string>
    <string name="transferred_balance">Transferred Balance (IDR)</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="transfer_fund_error">Please input your transfer fund!</string>
    <string name="transfer_successful">Your transfer is accepted!</string>
    <string name="add_fund_disclaimer">Note: The way this page currently work is for "proof of concept" purpose only and not reflect how the product work in real situation</string>
    <string name="main_menu_tips">Tips: Press Volume Up 3x to activate Voice Command</string>

    <string name="up_key_pressed_once">Press 2 more times to activate Voice Command!</string>
    <string name="up_key_pressed_twice">Press 1 more times to activate Voice Command!</string>
    <string name="voice_is_being_recorded">Your voice is being recorded!</string>
    <string name="voice_processing">Please wait, your voice is being processed..</string>
    <string name="voice_complete">Your voice is successfully uploaded!</string>
    <string name="voice_error">Error recognizing your Command, please try again!</string>

</resources>
