<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".addfundmenu.AddFundActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_requested_fund"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/requested_fund_amount_IDR"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_requested_fund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/til_requested_fund"
        app:layout_constraintStart_toStartOf="@id/til_requested_fund"
        app:layout_constraintEnd_toEndOf="@id/til_requested_fund"
        android:text="@string/add_fund_disclaimer"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request_fund"
        style="@style/Widget.FAVI.PreLogin.Button"
        android:layout_marginBottom="24dp"
        android:enabled="false"
        android:text="@string/request_fund"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>